# bacnet-explorer

./: .gitignore  README.md  bacnet_explorer.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
bacnet_explorer/: __main__.py  browser.py  cov.py  discovery.py  gui.py  rw.py  session.py  utils.py
bacnet_explorer/static/: index.html
tests/: test_rw.py  test_utils.py
