[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bacnet-explorer"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["bacpypes3", "ifaddr", "colorama"]

[project.optional-dependencies]
# pythonnet>=3.1.0rc0 is required for Python 3.14+ (adds TypeOffset314 ABI mapping).
# pip install --pre ".[app]"
app = ["pywebview>=6.0", "pythonnet>=3.1.0rc0"]

[project.scripts]
bacnet-explorer = "bacnet_explorer.__main__:main"

[tool.setuptools.packages.find]
include = ["bacnet_explorer*"]

[tool.setuptools.package-data]
bacnet_explorer = ["static/*"]
